Fix bug of z-index in sidebar-area and main-area

--- a/src/app/layouts/main-layout/main-layout.component.css
+++ b/src/app/layouts/main-layout/main-layout.component.css
@@ -13,14 +13,18 @@
 
   .sidebar-area {
     grid-area: sidebar;
+    z-index: 3;
   }
 
   .topbar-area {
     grid-area: topbar;
+    z-index: 2;
   }
 
   .main-area {
     grid-area: main;
+    z-index: 1;
+
     overflow: auto;
   }
 
